--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second github repo</title>
 </head>
 <body>
-    <h3></h3>
+    <h3>I can Push to github </h3>
+    <h3>New Code Change</h3>
 </body>
 </html>
