--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>I can Push to github </h3>
     <h3>New Code Change</h3>
+    <p>I'm Becoming a Web Developer</p>
 </body>
 </html>
