--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3>I can Push to github </h3>
     <h3>New Code Change</h3>
     <p>I'm Becoming a Web Developer</p>
+    <img src="world.png" alt="world">
 </body>
 </html>
