--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <h3>New Blog</h3>
+        <h5>look mama i can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem obcaecati possimus tenetur vero eveniet ut error sit neque recusandae. Eum, nihil deleniti. Doloremque nihil quisquam nostrum incidunt, in dolor fugiat beatae, rerum illo eligendi non modi voluptatem natus minus molestias!</p>
+    </div>
     <h3>I can Push to github </h3>
     <h3>New Code Change</h3>
-    <p>I'm Becoming a Web Developer</p>
+    <p>I'm Becoming a Web Developer ....</p>
     <img src="world.png" alt="world">
 </body>
 </html>
