papa in my new blog

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h3>New Blog</h3>
-        <h5>look mama i can write a blog</h5>
+        <h5>look mama i can write a blog ..i love you</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem obcaecati possimus tenetur vero eveniet ut error sit neque recusandae. Eum, nihil deleniti. Doloremque nihil quisquam nostrum incidunt, in dolor fugiat beatae, rerum illo eligendi non modi voluptatem natus minus molestias!</p>
     </div>
     <h3>I can Push to github </h3>
